@@ -6,10 +6,6 @@ Many map applications do not support local Mapsforge maps out of the box. Prebui
 
 Some of these map applications however, amongst these the Java OpenStreetMap Editor JOSM, are able to handle maps provided as tiles by a [Tile Map Service](https://en.wikipedia.org/wiki/Tile_Map_Service) (TMS), which is mainly used by web mapping servers. To make local Mapsforge maps nevertheless available within these applications, a local tile server can be set up to render these Mapsforge maps and to interact with them via TMS protocol. The corresponding tile server is available at this [mapsforgesrv](https://github.com/telemaxx/mapsforgesrv) repository.  
 
-While old *single task* server type was capable of rendering only one single set of parameters at a time, the new *multiple tasks* server type is capable of rendering multiple sets of parameters concurrently. Thus, one single *multiple tasks* server instance can replace multiple *single task* server instances.  
-**This Graphical user interface only supports the *multiple tasks* server type.**  
-Latest GUI supporting *single task* server type is still available in GitHub's [*legacy*](https://github.com/JFritzle/Mapsforge-for-TMS-Clients/tree/legacy) branch.
-
 ### Graphical user interface
 This project’s intension is to easily let the user interactively and comfortably select the numerous available options of tile server. In addition, option settings as well as position and font size of graphical user interface automatically get saved and restored. Tile server gets started/restarted using these options without need to manually set up any configuration files. 
 
@@ -35,9 +31,7 @@ Open [mapsforgesrv releases](https://github.com/telemaxx/mapsforgesrv/releases).
 Download most recently released jar file _mapsforgesrv-fatjar.jar_ from _<release\>\_for\_java11_tasks_ assets.  
 Windows: Copy downloaded jar file into Mapsforge tile server’s installation folder, e.g. into folder _%programfiles%/MapsforgeSrv_.  
 Linux: Copy downloaded jar file into Mapsforge tile server’s installation folder, e.g. into folder _~/MapsforgeSrv_.  
-Note:  
-New *multiple tasks* server type and server version 0.21.0.0 or higher is required.  
-Old *single task* server type and previous server versions are no longer supported.  
+Note: Server version 0.22.0.0 or higher is required.  
 
 3. Alternative Marlin rendering engine (optional, recommended)  
 [Marlin](https://github.com/bourgesl/marlin-renderer) is an open source Java2D rendering engine optimized for performance, replacing the standard built into Java. Download is available at [Marlin-renderer releases](https://github.com/bourgesl/marlin-renderer/releases).  
@@ -112,15 +106,8 @@ or associate file extension _.tcl_ to Tcl/Tk window shell’s binary _/usr/bin/w
 
 ### URLs for tile requests
 
-The URLs that the TMS client should use to request a tile from the tile server depends on whether the old server type or the new *tasks* server type is used.
 
-URLs to request map tiles and/or hillshading overlay tiles for old server type:  
-```
-scheme://address:mport/zoom/x/y.format
-scheme://address:hport/zoom/x/y.format   
-```
-
-URLs to request map tiles and/or hillshading overlay tiles for new *tasks* server type:  
+URLs to request map tiles and/or hillshading overlay tiles from server:  
 ```
 scheme://address:port/zoom/x/y.format?task=Map
 scheme://address:port/zoom/x/y.format?task=Hillshading  
@@ -140,9 +127,6 @@ scheme://address:port/zoom/x/y.format?task=Hillshading
 
 URL examples:
 ```
-http://127.0.0.1:60815/14/8584/5595.png
-http://127.0.0.1:60816/14/8584/5595.png
-
 http://127.0.0.1:60815/14/8584/5595.png?task=Map
 http://127.0.0.1:60815/14/8584/5595.png?task=Hillshading  
 ```
@@ -172,7 +156,7 @@ Mapsforge Tile Server and Hillshading Server have been defined in JOSM preferenc
 While console output of tile server can be informative and helpful to verify what is happening as well as to analyze errors, writing to console costs some performance. Therefore the console should be hidden if not needed. 
 * Built-in world map  
 Since the built-in [Mapsforge world map](https://download.mapsforge.org/maps/world/world.map) only shows the coastline, it only serves as a rough overview. Due to map's low resolution, coastlines show inaccurate at high resolution.  
-In order not to cover an accurate map, the built-in world map has been automatically deactivated at higher zoom levels since tile server version 0.21.0.3.    
+In order not to cover an accurate map, the built-in world map has been automatically deactivated at higher zoom levels.    
 Starting with server version 0.23.0.3, built-in world map is rendered with lower priority than user-defined accurate maps. Zoom level restriction was therefore removed. 
 * Hillshading  
   * When selecting "Hillshading on map", map and hillshading are rendered  into one single map.  
